--- a/src/app/@theme/layouts/sample/sample.layout.scss
+++ b/src/app/@theme/layouts/sample/sample.layout.scss
@@ -10,14 +10,30 @@
 
     transition: width 0.3s ease;
     width: $sidebar-width;
+    overflow: hidden;
 
     &.collapsed {
       width: 0;
+
+      /deep/ .main-container {
+        width: 0;
+
+        .scrollable {
+          width: $sidebar-width;
+          padding: 1.25rem;
+        }
+      }
     }
 
     /deep/ .main-container {
       width: $sidebar-width;
       background: nb-theme(color-bg);
+      transition: width 0.3s ease;
+      overflow: hidden;
+
+      .scrollable {
+        width: $sidebar-width;
+      }
 
       @include nb-for-theme(cosmic) {
         background: nb-theme(layout-bg);
